# headless-led-wall

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: embedded.yml  server.yml
embedded/: Cargo.toml  config.toml.template  partition_table.csv
embedded/.cargo/: config.toml
embedded/sprites/: Dino1.qoi  Dino2.qoi  Dino3.qoi  Dino4.qoi  README.md  no_image.qoi  test.qoi  wifi1.qoi  wifi2.qoi  wifi3.qoi
embedded/src/: flash.rs  lib.rs  panel.rs  resources.rs  rest.rs  ui.rs  wifi.rs
interface/: Cargo.toml
interface/src/: embedded.rs  lib.rs
resources/designs/: Dino.aseprite  No image.aseprite  Ubahn.aseprite  Weather.aseprite  Wifi.aseprite
resources/fonts/: README.md  WienerLinienFontBig.txt  WienerLinienFontSmall.txt
resources/sprites/: 62H2.qoi  62H3.qoi  62H4.qoi  62H5.qoi  62H6.qoi  62H7.qoi  62H8.qoi  62H9.qoi  62R1.qoi  62R2.qoi  62R3.qoi  62R4.qoi  62R5.qoi  62R6.qoi  62R7.qoi  62R8.qoi  U1H2.qoi  U1H3.qoi  U1H4.qoi  U1H5.qoi  U1H6.qoi  U1H7.qoi  U1H8.qoi  U1H9.qoi  U1R2.qoi  U1R3.qoi  U1R4.qoi  U1R5.qoi  U1R6.qoi  U1R7.qoi  U1R8.qoi  U1R9.qoi  U2H1.qoi  U2H2.qoi  U2H3.qoi  U2H4.qoi  U2H5.qoi  U2H6.qoi  U2H7.qoi  U2H8.qoi  (+117 more)
server/: Cargo.toml  config.toml.template  schema.json
server/src/: cli.rs  config.rs  display.rs  main.rs  server.rs  weather.rs  wl.rs
