[package]
name = "headless-display-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
jsonschema = "0.32.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt", "sync", "signal"] }
interface = { path = "../interface", default-features = false, features = [
    "server",
] }
postcard = { version = "1.1.3", default-features = false, features = [
    "alloc",
    "use-std",
] }
reqwest = "0.12.22"
log = { version = "0.4.27", features = ["std"] }
env_logger = "0.11.8"
chrono = "0.4.41"
icu_casemap = "2.0.0"
icu_locale_core = "2.0.0"
phf = { version = "0.12.1", features = ["macros"] }
tokio-util = "0.7.16"
static_cell = "2.1.1"
toml = "0.9.5"
indicatif = "0.18.0"
